// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumb component Should be a Breadcrumb 1`] = `
<DocumentFragment>
  <nav
    class="breadcrumb"
  >
    <ul>
      <li
        class=""
      >
        <a
          href="/"
        >
          Home
        </a>
      </li>
      <li
        class=""
      >
        <a
          href="/section"
        >
          Section
        </a>
      </li>
      <li
        class="is-active"
      >
        <a
          href="/detail"
        >
          Details
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumb component Should use inline style and custom size 1`] = `
<DocumentFragment>
  <nav
    class="breadcrumb is-large"
    style="margin-top: 10px;"
  >
    <ul>
      <li
        class=""
      >
        <a
          href="/"
        >
          Home
        </a>
      </li>
      <li
        class=""
      >
        <a
          href="/section"
        >
          Section
        </a>
      </li>
      <li
        class="is-active"
      >
        <a
          href="/detail"
        >
          Details
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumb component should use separator arrow 1`] = `
<DocumentFragment>
  <nav
    class="breadcrumb has-arrow-separator"
  >
    <ul>
      <li
        class=""
      >
        <a
          href="#1"
        >
          Storybook
        </a>
      </li>
      <li
        class=""
      >
        <a
          href="#2"
        >
          Breadcrumb
        </a>
      </li>
      <li
        class="is-active"
      >
        <a
          href="#3"
        >
          Breadcrumb Types
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumb component should use separator bullet 1`] = `
<DocumentFragment>
  <nav
    class="breadcrumb has-bullet-separator"
  >
    <ul>
      <li
        class=""
      >
        <a
          href="#1"
        >
          Storybook
        </a>
      </li>
      <li
        class=""
      >
        <a
          href="#2"
        >
          Breadcrumb
        </a>
      </li>
      <li
        class="is-active"
      >
        <a
          href="#3"
        >
          Breadcrumb Types
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumb component should use separator dot 1`] = `
<DocumentFragment>
  <nav
    class="breadcrumb has-dot-separator"
  >
    <ul>
      <li
        class=""
      >
        <a
          href="#1"
        >
          Storybook
        </a>
      </li>
      <li
        class=""
      >
        <a
          href="#2"
        >
          Breadcrumb
        </a>
      </li>
      <li
        class="is-active"
      >
        <a
          href="#3"
        >
          Breadcrumb Types
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumb component should use separator null 1`] = `
<DocumentFragment>
  <nav
    class="breadcrumb"
  >
    <ul>
      <li
        class=""
      >
        <a
          href="#1"
        >
          Storybook
        </a>
      </li>
      <li
        class=""
      >
        <a
          href="#2"
        >
          Breadcrumb
        </a>
      </li>
      <li
        class="is-active"
      >
        <a
          href="#3"
        >
          Breadcrumb Types
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumb component should use separator succeeds 1`] = `
<DocumentFragment>
  <nav
    class="breadcrumb has-succeeds-separator"
  >
    <ul>
      <li
        class=""
      >
        <a
          href="#1"
        >
          Storybook
        </a>
      </li>
      <li
        class=""
      >
        <a
          href="#2"
        >
          Breadcrumb
        </a>
      </li>
      <li
        class="is-active"
      >
        <a
          href="#3"
        >
          Breadcrumb Types
        </a>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;
